# codereaper

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  run_find_dead_code.py
.cursor/: mcp.json
codereaper/: __init__.py  __main__.py
codereaper/api/: __init__.py  __main__.py  app.py
codereaper/api/routers/: patches.py  scans.py
codereaper/core/: config.py  sse.py  storage.py  unbound_llm.py
codereaper/mcp/: __init__.py  __main__.py  server.py
codereaper/models/: enums.py  schemas.py
codereaper/services/: analyzer.py  patcher.py  scanner.py  verifier.py
test_site/: app.js  index.html
