[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codereaper"
version = "0.2.3"
description = "AI-driven JavaScript dead code elimination via browser agent + V8 coverage"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["dead-code", "javascript", "coverage", "mcp", "cursor", "browser-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "lmnr-index>=0.1.0",
    "lmnr>=0.6.21,<0.7",
    "playwright>=1.49.0",
]

[project.scripts]
codereaper = "codereaper.mcp:main"
codereaper-mcp = "codereaper.mcp:main"

[project.urls]
Homepage = "https://github.com/kaldonia/codereaper"
Repository = "https://github.com/kaldonia/codereaper"

[tool.hatch.build.targets.wheel]
packages = ["codereaper"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "test_site/",
    "bin/",
    ".cursor/",
    ".env",
    "*.db",
    "package.json",
]
